# virus-sim-dashboard

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  code.sh  code_style.sh  dashboard.ps1  justfile  pyproject.toml
assets/: flu_fitter.ipynb  flu_preprocessed.csv  flu_preprocessed.xlsx  model.ipynb  scenario.xlsx
docs/: README.md  plotly.md  quickstart.md  walkthrough.md
notebooks/: beta.ipynb  flu_fitter.ipynb  import.ipynb  model.ipynb  model2.ipynb  model_export.ipynb  model_export.xlsx  model_export2.ipynb  model_export2.xlsx
src/js/: theme_toggle.js
src/virus_sim_dashboard/: __init__.py  app.py  config.py  export.py  export_xlsx.py  import_xlsx.py  sim.py  util.py
src/virus_sim_dashboard/components/: __init__.py  app_shell.py  common.py  theme_toggle.py
src/virus_sim_dashboard/components/stepper/: __init__.py  common.py  step1.py  step2.py  step3.py  step4.py  step5.py
src/virus_sim_dashboard/pages/: about.py  home.py  import_mode.py  not_found_404.py
