[project]
name = "virus-sim-dashboard"
version = "0.1.0"
description = "CUH Winter Virus Modelling Dashboard"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "dash-compose>=2023.3.12",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.4.1",
]

[project.scripts]
dashboard = "virus_sim_dashboard:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
